tests/snapshots/event_routes_test__list_events_empty.snap
---
source: tests/event_routes_test.rs
expression: body
---
<!DOCTYPE html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><link rel="shortcut icon" href="/static/icons/favicon.ico"><link href="/static/icons/apple-touch-icon-57x57.png" sizes="57x57" rel="apple-touch-icon"><link sizes="114x114" rel="apple-touch-icon" href="/static/icons/apple-touch-icon-114x114.png"><link href="/static/icons/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72"><link href="/static/icons/apple-touch-icon-144x144.png" sizes="144x144" rel="apple-touch-icon"><link href="/static/icons/apple-touch-icon-60x60.png" sizes="60x60" rel="apple-touch-icon"><link href="/static/icons/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120"><link rel="apple-touch-icon" href="/static/icons/apple-touch-icon-76x76.png" sizes="76x76"><link href="/static/icons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152"><link rel="icon" sizes="196x196" href="/static/icons/favicon-196x196.png" type="image/png"><link type="image/png" sizes="160x160" rel="icon" href="/static/icons/favicon-160x160.png"><link href="/static/icons/favicon-96x96.png" rel="icon" type="image/png" sizes="96x96"><link type="image/png" sizes="16x16" href="/static/icons/favicon-16x16.png" rel="icon"><link type="image/png" href="/static/icons/favicon-32x32.png" sizes="32x32" rel="icon"><meta name="msapplication-TileColor" content="#ffffff"><meta name="msapplication-TileImage" content="/static/icons/mstile-144x144.png"><meta name="msapplication-square70x70logo" content="/static/icons/mstile-70x70.png"><meta name="msapplication-square150x150logo" content="/static/icons/mstile-150x150.png"><meta name="msapplication-square310x310logo" content="/static/icons/mstile-310x310.png"><meta name="msapplication-wide310x150logo" content="/static/icons/mstile-310x150.png"><title>Événements</title><link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" rel="stylesheet"><link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" crossorigin="anonymous" rel="stylesheet" integrity="sha384-xewr6kSkq3dBbEtB6Z/3oFZmknWn7nHqhLVLrYgzEFRbU/DHSxW7K3B44yWUN60D"><link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.1/css/theme.bootstrap_4.min.css" crossorigin="anonymous" rel="stylesheet" integrity="sha384-llRRffiUCHjRjm6N1bzQQPdo1sd3zGB9VT6ZgrR1cI7rm/HuUxEdPjlpjJEITKS6"><link rel="stylesheet" href="/static/css/style.css"></head><body><nav class="navbar navbar-expand-md navbar-dark bg-dark"><a class="navbar-brand" href="/">La Mariée à l'Honneur</a><button class="navbar-toggler" aria-controls="menu" type="button" aria-label="Toggle navigation" aria-expanded="false" data-toggle="collapse" data-target="id=" ><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="menu"><ul class="navbar-nav mr-auto"><li class="nav-item "><a class="nav-link" href="/clients">Clients</a></li><li class="nav-item "><a class="nav-link" href="/factures">Factures</a></li><li class="nav-item active"><a class="nav-link" href="/events">Événements</a></li></ul><ul class="navbar-nav flex-row"><li class="nav-item"><a class="nav-link" href="/help">Aide</a></li><li class="nav-item"><form method="POST" action="/signout"><button class="btn btn-link nav-link" type="submit">Se déconnecter</button></form></li></ul><div class="d-none" id="main-success"><div class="alert alert-success alert-dismissible fade show" role="alert"><strong>Bravo! </strong>L'action s'est terminé avec succès.<button class="close" data-dismiss="alert" aria-label="Close" type="button"><span aria-hidden="true">&times;</span></button></div></div><div class="d-none" id="main-error"><div class="alert alert-danger alert-dismissible fade show" role="alert"><strong>Oops</strong><span id="error-msg"></span><button class="close" aria-label="Close" data-dismiss="alert" type="button"><span aria-hidden="true">&amp;times;</span></button></div></div></div><script type="text/javascript">
                var urlParams = new URLSearchParams(window.location.search);
                var successParam = urlParams.get('success');
                if (successParam) {
                    document.getElementById("main-success").classList.remove("d-none");
                }

                var errorParam = urlParams.get('errorMsg');
                if (errorParam) {
                    document.getElementById("main-error").classList.remove("d-none");
                    document.getElementById("error-msg").innerText = errorParam;
                }
                setTimeout(function() {
                    var elem = document.getElementById("main-success");
                    if (elem) {
                    document.getElementById("main-success").parentNode.removeChild(elem);
                    }
                }, 5 * 1000);
            </script></nav><main role="main"><div class="container-fluid"><div class="row actions sticky-top" id="events-actions"><div class="col-12 col-sm-6 col-md-3"><h4>Liste des événements</h4></div><div class="col-12 col-sm-6 col-md-9"><input class="form-control" id="search" type="text" placeholder="Filtre"></div><div class="filtered-warning col-12 d-none"><span><b>Affichage filtré</b></span></div></div><div class="row"><div class="col-12"><table class="table table-sm find-event"><thead><tr><th scope="col">Actions</th><th scope="col">Type</th><th scope="col">Nom</th><th scope="col">Date</th></tr></thead><tbody></tbody></table></div></div></div></main><script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous" integrity="sha384-vk5WoKIaW/vJyUAd9n/wmopsmNhiy+L2Z+SBxGYnUkunIxVxAv/UtMOhba/xskxh"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script type="text/javascript" crossorigin="anonymous" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script><script crossorigin="anonymous" integrity="sha384-JPbtLYL10d/Z1crlc6GGGGM3PavCzzoUJ1UxH0bXHOfguWHQ6XAWrIzW+MBGGXe5" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" type="text/javascript"></script><script type="text/javascript" crossorigin="anonymous" integrity="sha384-QnFIXbEfAgO7z63b/aNzTSdSNLoNiNX/mk/Ok+NpUNMnvriWLo5cOtB0OUCAdKNu" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.1/js/jquery.tablesorter.min.js"></script><script type="text/javascript" src="/static/js/jquery-datepicker-fr.min.js" integrity="sha384-0l985W/1tDeBvpfVBzP0SeRoEpBScevfjJoBE5vKLb1/5TKQlDAks0Mj03AnIhAJ"></script><script type="text/javascript">
            $(document).ready(function() {
                $('.date-picker').each(function (i, e) {
                var minDate = $(e).attr("data-min-date") === "true" ? new Date() : undefined;
                $(e).datepicker({
                    dateFormat: "yy-mm-dd",
                    minDate: minDate
                });
                });
            });
            </script><script type="text/javascript">
                function setupSearch(containerId, inputId, tableSelector, clearSelector) {
                    function setClass(inputLength) {
                        if (inputLength > 0) {
                            $(`#${containerId} .filtered-warning`).removeClass('d-none');
                            $(`#${containerId}`).addClass('colored-actions');
                        } else {
                            $(`#${containerId}`).removeClass('colored-actions');
                            $(`#${containerId} .filtered-warning`).addClass('d-none');
                        }
                    }

                    function search(value) {
                        $(`${tableSelector} tr:has(> td)`).filter(function() {
                            $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1);
                        });
                    }

                    $(`#${inputId}`).on("keyup", function() {
                        var value = $(this).val().toLowerCase();
                        if (clearSelector !== null && value !== null) {
                            $(clearSelector).val('');
                        }

                        search($(this).val().toLowerCase());
                        setClass(value.length);
                    });


                    search($(`#${inputId}`).val().toLowerCase());
                    setClass($(`#${inputId}`).val().toLowerCase().length);
                }
            </script><div id="loading-overlay"><div class="loading-overlay-image"><img src="/static/icons/spinner.gif"></div></div><script type="text/javascript">
                function showSpinner() {
                    $('#loading-overlay').show();
                }

                function hideSpinner() {
                    $('#loading-overlay').hide();
                }
            </script><script type="text/javascript">
                $(document).ready(function(){
                    $("table.find-event").tablesorter({
                        theme : "bootstrap",
                        widthFixed: true
                    });
                });
            </script><script type="text/javascript">
            $(document).ready(function() {
                setupSearch('events-actions', 'search', 'table.find-event', null)
            });
        </script></body></html>
